--- a/src/app/AracDuzenle/arac-duzenle.component.html
+++ b/src/app/AracDuzenle/arac-duzenle.component.html
@@ -22,7 +22,19 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
-
+  <div class="row">
+    <div class="col-md-12">
+      <app_arac_duzenle_form_component
+        [AracDetay]="fulldata"
+        [AracMarkalari]="arac_markalari"
+        [AraCekisTipleri]="arac_cekis_tipleri"
+        [AracKasaTipleri]="arac_kasa_tipleri"
+        [AracMotorHacimleri]="arac_motor_hacimleri"
+        [AracVitesTipleri]="arac_vites_tipleri"
+        [AracYakitTipleri]="arac_yakit_tipleri"
+      ></app_arac_duzenle_form_component>
+    </div>
+  </div>
 </div>
 
 
