--- a/src/app/AracGiderEkle/arac-gider-ekle.component.html
+++ b/src/app/AracGiderEkle/arac-gider-ekle.component.html
@@ -25,44 +25,7 @@
 <div class="container-fluid m-l-230 m-t-15">
   <div class="row">
     <div class="col-md-12">
-      <!-- Form -->
-      <form>
-        <div class="panel panel-light">
-          <!-- Panel Heading -->
-          <div class="panel-heading">
-            <!-- Panel Left Block -->
-            <div class="panel-heading-left-block">
-              <span> Araç Ekle </span>
-            </div>
-            <!-- Panel Heading Left Block -->
-          </div>
-          <!-- Panel Heading -->
-          <!-- Panel Body -->
-          <div class="panel-body">
-            <!-- Araç Plaka -->
-            <div class="form-group">
-              <label for="FaturaAciklama" class="control-label form-style-ozel-label">Açıklama</label>
-              <textarea class="form-control form-style-ozel" id="FaturaAciklama" placeholder="Açıklama" name="fatura_aciklama"></textarea>
-            </div>
-            <!-- Araç Plaka -->
-
-
-
-
-          </div>
-          <!-- Panel Body -->
-          <!-- Panel Footer -->
-          <div class="panel-footer">
-            <div class="panel-footer-right-block">
-              <button class="btn btn-success-ozel btn-lg"><i class="fa fa-cloud-upload"></i> Kaydet</button>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-          <!-- Panel Footer -->
-        </div>
-        <!-- Panel -->
-      </form>
-      <!-- Form -->
+      <app_arac_gider_ekle_form_component></app_arac_gider_ekle_form_component>
     </div>
   </div>
 </div>
