--- a/src/app/MusteriMaasPrimEkle/musteri-maas-prim-ekle.component.html
+++ b/src/app/MusteriMaasPrimEkle/musteri-maas-prim-ekle.component.html
@@ -23,7 +23,11 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
-
+  <div class="row">
+    <div class="col-md-12">
+      <app_musteri_maas_prim_ekle_form_component></app_musteri_maas_prim_ekle_form_component>
+    </div>
+  </div>
 </div>
 
 
