--- a/src/app/Calisanlar/calisanlar.component.html
+++ b/src/app/Calisanlar/calisanlar.component.html
@@ -4,14 +4,14 @@
     <div class="row">
         <!-- Page Header -->
         <div class="page-head-title">
-          <h2>Müşteriler</h2>
+          <h2>Çalışanlar</h2>
         </div>
         <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Library</a></li>
-        <li class="active">Data</li>
+        <li><a href="#">Anasayfa</a></li>
+        <li><a href="#">Çalışanlar</a></li>
+        <li class="active">Listele</li>
       </ol>
       <!-- Breadcumb -->
     </div>
