--- a/src/app/CalisanDetay/calisan_detay.component.html
+++ b/src/app/CalisanDetay/calisan_detay.component.html
@@ -4,14 +4,14 @@
     <div class="row">
         <!-- Page Header -->
         <div class="page-head-title">
-          <h2>Çalışanlar</h2>
+          <h2>Çalışan Detay</h2>
         </div>
         <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
         <li><a href="#">Çalışanlar</a></li>
-        <li class="active">Listele</li>
+        <li class="active">Ahmet Elçik</li>
       </ol>
       <!-- Breadcumb -->
     </div>
