--- a/src/app/CalisanDetay/calisan_detay.component.html
+++ b/src/app/CalisanDetay/calisan_detay.component.html
@@ -2,11 +2,11 @@
 <div id="sayfa-baslik" style="position:relative">
   <div class="container-fluid m-l-230">
     <div class="row">
-        <!-- Page Header -->
-        <div class="page-head-title">
-          <h2>Çalışan Detay</h2>
-        </div>
-        <!-- Page Header -->
+      <!-- Page Header -->
+      <div class="page-head-title">
+        <h2>Çalışan Detay</h2>
+      </div>
+      <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
@@ -21,56 +21,120 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
-  <!-- Müşteri Listele Table -->
+
   <div class="row">
-    <div class="col-xs-12">
-      <!-- Panel -->
-      <div class="panel panel-light" style="border-radius: 5px">
-        <!-- Panel Body -->
-        <div class="panel-body" style="padding: 0;">
-          <div id="musteri-listele-body-table">
-            <div class="table-responsive">
-
-              <table class="table">
-                <thead>
-                <th class="musteri-listele-table-head-text-first" style="padding-left: 20px;padding-bottom: 20px;padding-top: 20px">Adi</th>
-                <th class="musteri-listele-table-head-text-last" style="padding-right: 20px;padding-bottom: 20px;padding-top: 20px;text-align:right"> <i class="fa fa-sort-numeric-desc"></i> Bakiye</th>
-                </thead>
-                <tbody>
-                <tr>
-                  <td class="first-table-cell">
-                    <a routerLink="/calisanlar/1/detay">
-                      <div class="musteri-listele-table-left-block">
-                        <div class="musteri-listele-table-left-kisa-ad-block">
-                          <span>AE</span>
-                        </div>
-                        <div class="musteri-listele-table-left-tam-adi">
-                          <span>Ahmet Elçik</span>
-                          <span class="musteri-listele-table-left-telefon-no">(554) 910 98 94</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                  <td style="text-align: right" class="last-table-cell">
-                    <a routerLink="/calisanlar/2/detay">
-                      <div class="musteri-listele-table-right-block">
-                        <div class="musteri-listele-table-right-bakiye-text">
-                          <span>250,00 <i class="fa fa-try"></i></span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                </tr>
-
-                </tbody>
-              </table>
+    <div class="col-md-12">
+      <!-- Çalışan Detay-->
+      <div class="panel panel-light">
+        <!-- Panel Heading -->
+        <div class="panel-heading">
+          <!-- Panel Left Block -->
+          <div class="panel-heading-left-block">
+            <span> Çalışan Detay </span>
+          </div>
+          <!-- Panel Heading Left Block -->
+        </div>
+        <!-- Panel Heading -->
+        <div class="panel-body">
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Adı Soyadı</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span>Ahmet Elçik</span>
+            </div>
+          </div>
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>TC NO</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span>29437619562</span>
+            </div>
+          </div>
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Eposta Adresi</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span>ahmetelcik35@gmail.com</span>
+            </div>
+          </div>
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Telefon Numarası</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span class="musteri-detay-tel-no">(554) 910 98 94</span>
+              <span class="musteri-detay-tel-no">(554) 910 98 94</span>
+            </div>
+          </div>
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Faks Numarası</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <span>(554) 910 98 94</span>
+            </div>
+          </div>
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Kayıt Şube</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <a href="#" class="musteri-detay-kayit-sube-text">Merkez Şube</a>
+            </div>
+          </div>
+          <div class="row musteri-detay-list-row-block">
+            <div class="col-md-3">
+              <span>Açık Adres</span>
+            </div>
+            <div class="col-md-1">
+              <span>:</span>
+            </div>
+            <div class="col-md-8">
+              <p>15 Mayıs Mah.Ressam Ahmet Sk Menekşe Apt.Kat : 2 Daire : 5 No : 47 Denizli / Merkez</p>
             </div>
           </div>
         </div>
-        <!-- Panel Body -->
+        <div class="panel-footer">
+          <!-- Panel Footer Left Block -->
+          <div class="panel-footer-left-block">
+            <div class="panel-footer-ekleyen-kullanici-block">
+              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
+            </div>
+          </div>
+          <!-- Panel Footer Left Block -->
+          <!-- Panel Footer Right Block -->
+          <div class="panel-footer-right-block">
+            <div class="panel-footer-olusturulma-tarihi-block">
+              <span>Oluşturulma Tarihi : 12 Aralık 2016 11:30</span>
+            </div>
+          </div>
+          <!-- Panel Footer Right Block -->
+          <div class="clearfix"></div>
+        </div>
       </div>
-      <!-- Panel -->
+      <!-- Çalışan Detay-->
     </div>
   </div>
-  <!-- Müşteri Listele Table -->
+
 </div>
