--- a/src/app/CalisanDetay/calisan_detay.component.html
+++ b/src/app/CalisanDetay/calisan_detay.component.html
@@ -21,10 +21,10 @@
 
 
 <div class="container-fluid m-l-230 m-t-15">
-
+  <!-- Row -->
   <div class="row">
-    <div class="col-md-12">
-      <!-- Çalışan Detay-->
+    <!-- Çalışan Detay-->
+    <div class="col-md-8">
       <div class="panel panel-light">
         <!-- Panel Heading -->
         <div class="panel-heading">
@@ -36,6 +36,7 @@
         </div>
         <!-- Panel Heading -->
         <div class="panel-body">
+          <!-- Adı Soyadı -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
               <span>Adı Soyadı</span>
@@ -47,20 +48,11 @@
               <span>Ahmet Elçik</span>
             </div>
           </div>
+          <!-- Adı Soyadı -->
+          <!-- E-Posta Adresi -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>TC NO</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>29437619562</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Eposta Adresi</span>
+              <span>E-Posta Adresi</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
@@ -69,51 +61,20 @@
               <span>ahmetelcik35@gmail.com</span>
             </div>
           </div>
+          <!-- E-Posta Adresi -->
+          <!-- IBAN Numarası -->
           <div class="row musteri-detay-list-row-block">
             <div class="col-md-3">
-              <span>Telefon Numarası</span>
+              <span>IBAN Numarası</span>
             </div>
             <div class="col-md-1">
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span class="musteri-detay-tel-no">(554) 910 98 94</span>
-              <span class="musteri-detay-tel-no">(554) 910 98 94</span>
+              <span>TR25252525252525253242342</span>
             </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Faks Numarası</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>(554) 910 98 94</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Kayıt Şube</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <a href="#" class="musteri-detay-kayit-sube-text">Merkez Şube</a>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Açık Adres</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <p>15 Mayıs Mah.Ressam Ahmet Sk Menekşe Apt.Kat : 2 Daire : 5 No : 47 Denizli / Merkez</p>
-            </div>
-          </div>
+          </div> 
+          <!-- IBAN Numarası -->         
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
@@ -133,8 +94,56 @@
           <div class="clearfix"></div>
         </div>
       </div>
-      <!-- Çalışan Detay-->
     </div>
+    <!-- Çalışan Detay-->
+    <!-- Sağ Taraf -->
+    <div class="col-md-4">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Body -->
+        <div class="panel-body">
+          <div class="row">
+            <!-- Diğer Button DropDown -->
+            <div class="col-md-6">
+              <div class="btn-group btn-block" dropdown>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
+                <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
+                  <li role="menuitem"><a class="dropdown-item" href="#">Yeni Maaş / Prim</a></li>
+                  <li class="divider dropdown-divider"></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <!-- Diğer Button DropDown -->
+            <!-- Ödeme Ekle -->
+            <div class="col-md-6">
+              <a href="#" class="btn btn-success-ozel btn-block" ><i class="fa fa-plus"></i> Avans Ekle</a>
+            </div>
+            <!-- Ödeme Ekle -->
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              
+            </div>
+          </div>
+        </div>
+        <!-- Panel Body -->
+        <!-- Panel Footer -->
+        <div class="panel-footer">
+          <div class="calisan-right-islem-detay-footer-block">
+            <div class="calisan-right-islem-detay-footer-text-block">
+              <span class="calisan-right-footer-title-text">TOPLAM</span>
+              <span class="calisan-right-footer-content-text pull-right">2.500,00 <i class="fa fa-try"></i></span>
+            </div>
+          </div>
+        </div>
+        <!-- Panel Footer -->
+      </div>
+      <!-- Panel -->
+    </div>
+    <!-- Sağ Taraf -->
   </div>
+  <!-- Row -->
 
 </div>
