--- a/src/app/CalisanDetay/calisan_detay.component.html
+++ b/src/app/CalisanDetay/calisan_detay.component.html
@@ -73,8 +73,8 @@
             <div class="col-md-8">
               <span>TR25252525252525253242342</span>
             </div>
-          </div> 
-          <!-- IBAN Numarası -->         
+          </div>
+          <!-- IBAN Numarası -->
         </div>
         <div class="panel-footer">
           <!-- Panel Footer Left Block -->
@@ -118,13 +118,28 @@
             <!-- Diğer Button DropDown -->
             <!-- Ödeme Ekle -->
             <div class="col-md-6">
-              <a href="#" class="btn btn-success-ozel btn-block" ><i class="fa fa-plus"></i> Avans Ekle</a>
+              <a href="#" class="btn btn-success-ozel btn-block"><i class="fa fa-plus"></i> Avans Ekle</a>
             </div>
             <!-- Ödeme Ekle -->
           </div>
           <div class="row">
             <div class="col-md-12">
-              
+              <!-- Kalan Bakiye Bilgi -->
+              <div class="kalan-bilgi-calisan-detay">
+                <!-- Geçikmiş Maaş -->
+                <div class="kalan-bilgisi">
+                  <span class="kalan-bilgis-text-info">GEÇİKMİŞ MAAŞ</span>
+                  <span class="kalan-bilgi-text-try">314,00 <i class="fa fa-try"></i></span>
+                </div>
+                <!-- Geçikmiş Maaş -->
+                <!-- Ödenecek Maaş -->
+                <div class="kalan-bilgisi">
+                  <span class="kalan-bilgis-text-info odenecek-maas">ÖDENECEK MAAŞ</span>
+                  <span class="kalan-bilgi-text-try odenecek-maas">314,00 <i class="fa fa-try"></i></span>
+                </div>
+                <!-- Ödenecek Maaş -->
+              </div>
+              <!-- Kalan Bakiye Bilgi -->
             </div>
           </div>
         </div>
