--- a/src/app/CalisanDetay/calisan_detay.component.html
+++ b/src/app/CalisanDetay/calisan_detay.component.html
@@ -108,10 +108,10 @@
               <div class="btn-group btn-block" dropdown>
                 <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a class="dropdown-item" href="#">Yeni Maaş / Prim</a></li>
+                  <li role="menuitem"><a class="dropdown-item" routerLink="../maaslar/yeni">Yeni Maaş / Prim</a></li>
                   <li class="divider dropdown-divider"></li>
-                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
-                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="javascript:void(0)" routerLink="../duzenle"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
                 </ul>
               </div>
             </div>
@@ -156,6 +156,120 @@
         <!-- Panel Footer -->
       </div>
       <!-- Panel -->
+
+      <!-- Tab -->
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Body -->
+        <div class="panel-body padding-0">
+          <!-- Tab -->
+          <tabset>
+            <!-- Notlar -->
+            <tab heading="Notlar" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <ul class="not-listele-tab">
+                  <li class="not-listele-tab-not-ekle-btn"><button class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Not</button></li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-commenting"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </tab>
+            <!-- Notlar -->
+          </tabset>
+          <!-- Tab -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+      <!-- Tab -->
     </div>
     <!-- Sağ Taraf -->
   </div>
