--- a/src/app/Calisanlar/calisanlar.component.html
+++ b/src/app/Calisanlar/calisanlar.component.html
@@ -23,7 +23,7 @@
 <div class="container-fluid m-l-230 m-t-15">
   <!-- Müşteri Listele Table -->
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-md-12">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
         <!-- Panel Body -->
