--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -6,6 +6,7 @@
       <li class="active"><a routerLink="/musteriler"><i class="fa fa-address-book"></i><span>Müşteriler</span></a></li>
       <li><a routerLink="/calisanlar"><i class="fa fa-user"></i><span>Çalışanlar</span></a></li>
       <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
+      <li ><a routerLink="/subeler"><i class="fa fa-building-o"></i><span>Şubeler</span></a></li>
 
     </ul>
   </div>
