--- a/src/app/Subeler/subeler.component.html
+++ b/src/app/Subeler/subeler.component.html
@@ -46,7 +46,7 @@
                 <tbody>
                 <tr>
                   <td class="first-table-cell">
-                    <a href="#">
+                    <a routerLink="/subeler/1/detay">
                       <div class="sube-listele-table-left-block">
                         <div class="sube-listele-table-sube-adi-block">
                           <span>Denizli Merkez Şube</span>
@@ -57,7 +57,7 @@
                 </tr>
                 <tr>
                   <td class="first-table-cell">
-                    <a href="#" >
+                    <a routerLink="/subeler/2/detay" >
                       <div class="sube-listele-table-left-block">
                         <div class="sube-listele-table-sube-adi-block">
                           <span>Denizli Merkez Şube</span>
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                   <td class="first-table-cell">
-                    <a href="#">
+                    <a routerLink="/subeler/3/detay">
                       <div class="sube-listele-table-left-block">
                         <div class="sube-listele-table-sube-adi-block">
                           <span>Denizli Merkez Şube</span>
