--- a/src/app/SubeDetay/sube_detay.component.html
+++ b/src/app/SubeDetay/sube_detay.component.html
@@ -59,7 +59,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <span>ahmetelcik35@gmail.com</span>
+              <span>0 850 885 07 47 </span>
             </div>
           </div>
           <!-- Telefon Numarası -->
