--- a/src/app/SubeEkle/sube_ekle.component.html
+++ b/src/app/SubeEkle/sube_ekle.component.html
@@ -24,9 +24,59 @@
   <!-- Row -->
   <div class="row">
     <div class="col-md-12">
-        <!-- Çalışan Ekle Component -->
-        <app_calisan_ekle_form_component></app_calisan_ekle_form_component>
-        <!-- Çalışan Ekle Component -->
+       <!-- Şube Ekle -->
+      <form>
+        <!-- Panel -->
+        <div class="panel panel-light">
+          <!-- Panel Heading -->
+          <div class="panel-heading">
+          <!-- Panel Left Block -->
+            <div class="panel-heading-left-block">
+              <span> Yeni Şube </span>
+            </div>
+          <!-- Panel Heading Left Block -->
+          </div>
+          <!-- Panel Heading -->
+          <!-- Panel Body -->
+          <div class="panel-body">
+
+          <!-- Şube Adı -->
+          <div class="form-group">
+            <label for="SubeAdi" class="control-label form-style-ozel-label">Şube Adı</label>
+            <input type="text" class="form-control form-style-ozel" id="SubeAdi" name="sube_adi" placeholder="Şube Adı">
+          </div>
+          <!-- Şube Adı -->
+
+          <!-- Şube Telefon -->
+          <div class="form-group">
+            <label for="SubeTelefon" class="control-label form-style-ozel-label">Telefon Numarası</label>
+            <input type="text" class="form-control form-style-ozel" id="SubeTelefon" name="sube_telefon" placeholder="Telefon Numarası">
+          </div>
+          <!-- Şube Telefon -->
+
+          <!-- Şube Açık Adresi -->
+          <div class="form-group">
+            <label for="SubeAcikAdres" class="control-label form-style-ozel-label">Şube Açık Adres</label>
+            <textarea class="form-control form-style-ozel" id="SubeAcikAdres" name="sube_acik_adres" placeholder="Açık Adres"></textarea>
+          </div>
+          <!-- Şube Açık Adresi -->
+
+          </div>
+          <!-- Panel Body -->
+
+          <!-- Panel Footer -->
+          <div class="panel-footer">
+            <div class="panel-footer-right-block">
+              <button class="btn btn-success-ozel btn-lg"><i class="fa fa-cloud-upload"></i> Kaydet</button>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <!-- Panel Footer -->
+        </div>
+        <!-- Panel -->
+
+      </form>
+       <!-- Şube Ekle -->
     </div>
   </div>
   <!-- Row -->
