--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -7,6 +7,7 @@
       <li><a routerLink="/calisanlar"><i class="fa fa-user"></i><span>Çalışanlar</span></a></li>
       <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
       <li ><a routerLink="/subeler"><i class="fa fa-building-o"></i><span>Şubeler</span></a></li>
+      <li ><a routerLink="/kategoriler"><i class="fa fa-tags"></i><span>Kategoriler</span></a></li>
 
     </ul>
   </div>
