--- a/src/app/AracGiderKategoriEkle/arac_gider_kategori_ekle.component.html
+++ b/src/app/AracGiderKategoriEkle/arac_gider_kategori_ekle.component.html
@@ -4,14 +4,14 @@
     <div class="row">
       <!-- Page Header -->
       <div class="page-head-title">
-        <h2>Yeni Hizmet Kategori</h2>
+        <h2>Yeni Araç Gider Kategori</h2>
       </div>
       <!-- Page Header -->
       <!-- Breadcumb -->
       <ol class="breadcrumb breadcumb-title">
         <li><a href="#">Anasayfa</a></li>
         <li><a href="#">Kategoriler</a></li>
-        <li><a href="#">Hizmet</a></li>
+        <li><a href="#">Araç Gider</a></li>
         <li class="active">Yeni</li>
       </ol>
       <!-- Breadcumb -->
@@ -25,7 +25,7 @@
   <!-- Row -->
   <div class="row">
     <div class="col-md-12">
-       <!-- Hizmet Kategori Ekle -->
+       <!-- Araç Gider Kategori Ekle -->
       <form>
         <!-- Panel -->
         <div class="panel panel-light">
@@ -33,7 +33,7 @@
           <div class="panel-heading">
           <!-- Panel Left Block -->
             <div class="panel-heading-left-block">
-              <span> Yeni Hizmet Kategori </span>
+              <span> Yeni Araç Gider Kategori </span>
             </div>
           <!-- Panel Heading Left Block -->
           </div>
@@ -43,8 +43,8 @@
 
           <!-- Kategori Adi -->
           <div class="form-group">
-            <label for="HizmetKategoriAdi" class="control-label form-style-ozel-label">Kategori Adı</label>
-            <input type="text" class="form-control form-style-ozel" id="HizmetKategoriAdi" name="sube_adi" placeholder="Kategori Adı">
+            <label for="AracGiderKategoriAdi" class="control-label form-style-ozel-label">Kategori Adı</label>
+            <input type="text" class="form-control form-style-ozel" id="AracGiderKategoriAdi" name="kategori_adi" placeholder="Kategori Adı">
           </div>
           <!-- Kategori Adi -->
 
@@ -64,7 +64,7 @@
         <!-- Panel -->
 
       </form>
-        <!-- Hizmet Kategori Ekle -->
+        <!-- Araç Gider Kategori Ekle -->
     </div>
   </div>
   <!-- Row -->
