--- a/src/app/GiderKategoriEkle/gider_kategori_ekle.component.html
+++ b/src/app/GiderKategoriEkle/gider_kategori_ekle.component.html
@@ -25,7 +25,7 @@
   <!-- Row -->
   <div class="row">
     <div class="col-md-12">
-       <!-- Araç Gider Kategori Ekle -->
+       <!-- Gider Kategori Ekle -->
       <form>
         <!-- Panel -->
         <div class="panel panel-light">
@@ -41,12 +41,12 @@
           <!-- Panel Body -->
           <div class="panel-body">
 
-          <!-- Kategori Adi -->
-          <div class="form-group">
-            <label for="AracGiderKategoriAdi" class="control-label form-style-ozel-label">Kategori Adı</label>
-            <input type="text" class="form-control form-style-ozel" id="AracGiderKategoriAdi" name="kategori_adi" placeholder="Kategori Adı">
-          </div>
-          <!-- Kategori Adi -->
+            <!-- Kategori Adi -->
+            <div class="form-group">
+              <label for="GiderKategoriAdi" class="control-label form-style-ozel-label">Kategori Adı</label>
+              <input type="text" class="form-control form-style-ozel" id="GiderKategoriAdi" name="kategori_adi" placeholder="Kategori Adı">
+            </div>
+            <!-- Kategori Adi -->
 
 
           </div>
@@ -64,7 +64,7 @@
         <!-- Panel -->
 
       </form>
-        <!-- Araç Gider Kategori Ekle -->
+        <!-- Gider Kategori Ekle -->
     </div>
   </div>
   <!-- Row -->
