add hizmet detay

--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -8,6 +8,7 @@
       <li ><a routerLink="/giderler/listele"><i class="fa fa-address-book"></i><span>Giderler</span></a></li>
       <li ><a routerLink="/subeler"><i class="fa fa-building-o"></i><span>Şubeler</span></a></li>
       <li ><a routerLink="/kategoriler"><i class="fa fa-tags"></i><span>Kategoriler</span></a></li>
+      <li ><a routerLink="/hizmetler"><i class="fa fa-support"></i><span>Ekstralar & Hizmetler</span></a></li>
 
     </ul>
   </div>
