add hizmet ekleme

--- a/src/app/Hizmetler/hizmetler.component.html
+++ b/src/app/Hizmetler/hizmetler.component.html
@@ -22,7 +22,15 @@
 
 <div class="container-fluid m-l-230 m-t-15">
 
+<!-- Hizmet Ekle -->
 <div class="row">
+    <div class="col-md-12">
+        <a routerLink="/hizmetler/yeni" class="btn btn-success-ozel pull-right"><i class="fa fa-plus"></i> YENİ HİZMET</a>
+    </div>
+</div>
+<!-- Hizmet Ekle -->
+
+<div class="row m-t-15">
     <div class="col-md-12">
       <!-- Hizmet Listele -->
       <!-- Panel -->
