--- a/src/app/Subeler/subeler.component.html
+++ b/src/app/Subeler/subeler.component.html
@@ -22,13 +22,13 @@
 
 <div class="container-fluid m-l-230 m-t-15">
 
-<!-- Çalışan Ekle -->
+<!-- Şube Ekle -->
 <div class="row">
     <div class="col-md-12">
         <a routerLink="/subeler/yeni" class="btn btn-success-ozel pull-right"><i class="fa fa-plus"></i> YENİ ŞUBE</a>
     </div>
 </div>
-<!-- Çalışan Ekle -->
+<!-- Şube Ekle -->
 
   <!-- Şube Listele Table -->
   <div class="row m-t-15">
