--- a/src/app/solmenu/solmenu.component.html
+++ b/src/app/solmenu/solmenu.component.html
@@ -9,6 +9,7 @@
       <li ><a routerLink="/subeler"><i class="fa fa-building-o"></i><span>Şubeler</span></a></li>
       <li ><a routerLink="/kategoriler"><i class="fa fa-tags"></i><span>Kategoriler</span></a></li>
       <li ><a routerLink="/hizmetler"><i class="fa fa-support"></i><span>Ekstralar & Hizmetler</span></a></li>
+      <li ><a routerLink="/hesaplar"><i class="fa fa-bank"></i><span>Kasa & Bankalar</span></a></li>
 
     </ul>
   </div>
