--- a/src/app/Ui/List/list.component.html
+++ b/src/app/Ui/List/list.component.html
@@ -24,6 +24,126 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <!-- Kasa ve Banka Listele -->
+  <div class="row">
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0">
+          <!-- Hesap Listele -->
+          <div id="hesaplari-listele-table-body-block">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <th class="kasavebanka-listele-table-head-text-first">Hesap İsmi</th>
+                  <th class="kasavebanka-listele-table-head-text">IBAN</th>
+                  <th class="kasavebanka-listele-table-head-text-last" style="text-align: right">Bakiye</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="first-child">
+                      <a href="#">
+                        <div class="kasavebanka-listele-left-block">
+                          <!-- İcon -->
+                          <div class="kasavebanka-listele-table-left-icon-block">
+                            <i class="fa fa-bank"></i>
+                          </div>
+                          <!-- İcon -->
+                          <!-- İcon Yanı Block -->
+                          <div class="kasavebanka-hesap-ismi-ve-sube-adi">
+                            <!-- Hesap İsmi -->
+                            <div class="kasavebanka-hesap-ismi-block">
+                              <span>Merkez Şube</span>
+                            </div>
+                            <!-- Hesap İsmi -->
+                            <!-- Şube Adı -->
+                            <div class="kasavebanka-hesap-sube-adi-block">
+                              <span>Merkez Şube</span>
+                            </div>
+                            <!-- Şube Adı -->
+                          </div>
+                          <!-- İcon Yanı Block -->
+                        </div>
+                      </a>
+                    </td>
+                    <td style="vertical-align: middle;min-width: 200px;">
+                      <a href="#">
+                        <div class="kasavebanka-listele-iban-block">
+                          <div class="kasavebanka-listele-iban-text">
+                            <span>TR2323-2323-2323-0095</span>
+                          </div>
+                        </div>
+                      </a>
+                    </td>
+                    <td class="last-child">
+                      <a href="#">
+                        <div class="kasavebanka-listele-bakiye-block">
+                          <div class="kasavebanka-listele-bakiye-text">
+                            <span>250,10 <i class="fa fa-try"></i></span>
+                          </div>
+                        </div>
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="first-child">
+                      <a href="#">
+                        <div class="kasavebanka-listele-left-block">
+                          <!-- İcon -->
+                          <div class="kasavebanka-listele-table-left-icon-block">
+                            <i class="fa fa-bank"></i>
+                          </div>
+                          <!-- İcon -->
+                          <!-- İcon Yanı Block -->
+                          <div class="kasavebanka-hesap-ismi-ve-sube-adi">
+                            <!-- Hesap İsmi -->
+                            <div class="kasavebanka-hesap-ismi-block">
+                              <span>Merkez Şube</span>
+                            </div>
+                            <!-- Hesap İsmi -->
+                            <!-- Şube Adı -->
+                            <div class="kasavebanka-hesap-sube-adi-block">
+                              <span>Merkez Şube</span>
+                            </div>
+                            <!-- Şube Adı -->
+                          </div>
+                          <!-- İcon Yanı Block -->
+                        </div>
+                      </a>
+                    </td>
+                    <td style="vertical-align: middle;min-width: 200px;">
+                      <a href="#">
+                        <div class="kasavebanka-listele-iban-block">
+                          <div class="kasavebanka-listele-iban-text">
+                            <span>TR2323-2323-2323-0095</span>
+                          </div>
+                        </div>
+                      </a>
+                    </td>
+                    <td class="last-child">
+                      <a href="#">
+                        <div class="kasavebanka-listele-bakiye-block">
+                          <div class="kasavebanka-listele-bakiye-text">
+                            <span>250,10 <i class="fa fa-try"></i></span>
+                          </div>
+                        </div>
+                      </a>
+                    </td>
+                  </tr>                  
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!-- Hesap Listele -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Kasa ve Banka Listele -->
+
   <!-- Kiralama Listele -->
   <div class="row">
     <div class="col-md-12">
