--- a/src/app/HesapDetay/hesap_detay.component.html
+++ b/src/app/HesapDetay/hesap_detay.component.html
@@ -103,43 +103,26 @@
         <!-- Panel Body -->
         <div class="panel-body">
           <div class="row">
-            <!-- Diğer Button DropDown -->
-            <div class="col-md-6">
+            <div class="col-md-12">
               <div class="btn-group btn-block" dropdown>
-                <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle> PARA GİRİŞ & ÇIKIŞI EKLE <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
-                  <li role="menuitem"><a class="dropdown-item" routerLink="../maaslar/yeni">Yeni Maaş / Prim</a></li>
-                  <li class="divider dropdown-divider"></li>
-                  <li role="menuitem"><a class="dropdown-item" href="javascript:void(0)" routerLink="../duzenle"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
-                  <li role="menuitem"><a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-sign-in fa-rotate-90"></i> <span> Para Girişi Ekle</span></a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="#"><i class="fa fa-sign-in fa-rotate-270"></i> <span> Para Çıkışı Ekle </span></a></li>
                 </ul>
               </div>
             </div>
-            <!-- Diğer Button DropDown -->
-            <!-- Ödeme Ekle -->
-            <div class="col-md-6">
-              <a href="#" class="btn btn-success-ozel btn-block"><i class="fa fa-plus"></i> Avans Ekle</a>
-            </div>
-            <!-- Ödeme Ekle -->
           </div>
+
           <div class="row">
-            <div class="col-md-12">
-              <!-- Kalan Bakiye Bilgi -->
-              <div class="kalan-bilgi-calisan-detay">
-                <!-- Geçikmiş Maaş -->
-                <div class="kalan-bilgisi">
-                  <span class="kalan-bilgis-text-info">GEÇİKMİŞ MAAŞ</span>
-                  <span class="kalan-bilgi-text-try">314,00 <i class="fa fa-try"></i></span>
-                </div>
-                <!-- Geçikmiş Maaş -->
-                <!-- Ödenecek Maaş -->
-                <div class="kalan-bilgisi">
-                  <span class="kalan-bilgis-text-info odenecek-maas">ÖDENECEK MAAŞ</span>
-                  <span class="kalan-bilgi-text-try odenecek-maas">314,00 <i class="fa fa-try"></i></span>
-                </div>
-                <!-- Ödenecek Maaş -->
+            <div class="col-md-12 m-t-5">
+              <div class="btn-group btn-block" dropdown>
+                <button class="btn btn-default-ozel btn-block" dropdownToggle> HESAP İŞLEMLERİ <span class="caret"></span></button>
+                <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
+                  <li role="menuitem"><a href="#" class="dropdown-item"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
+                  <li role="menuitem"><a href="#" class="dropdown-item"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                </ul>
               </div>
-              <!-- Kalan Bakiye Bilgi -->
             </div>
           </div>
         </div>
@@ -148,8 +131,8 @@
         <div class="panel-footer">
           <div class="calisan-right-islem-detay-footer-block">
             <div class="calisan-right-islem-detay-footer-text-block">
-              <span class="calisan-right-footer-title-text">TOPLAM</span>
-              <span class="calisan-right-footer-content-text pull-right">2.500,00 <i class="fa fa-try"></i></span>
+              <span class="calisan-right-footer-title-text">BAKİYE</span>
+              <span class="calisan-right-footer-content-text pull-right">0,00 <i class="fa fa-try"></i></span>
             </div>
           </div>
         </div>
